modified the index.html and style.css

--- a/index.html
+++ b/index.html
@@ -71,10 +71,17 @@
  </div>
 <!--Work Contact information section here -->
  <div class="contact-information" class="contact-information">
-  <img src="./assets/images/search-engine-optimization.jpg" width="300" height="200" class="float-right" alt="This is my contact imformation" />
+  <img src="./assets/images/C.Nebula.jpg" width="200" height="200" class="float-right" alt="This is my contact imformation" />
   <h2>Contact Information</h2>
+  <h3>Colin Nebula</h3>
   <p>
-    This is the section where I mention any work related experiences
+    As an open and approachable person who loves to engage with others both in person and virtually, 
+        I find myself always drawn to anything to do with technology and computers. 
+        As a self starter who loves being part of a team as well, I bring discpline and rigour from my years serving the US Army. 
+        This, in addition to my numerous diplomas in digital art, technology, animation, 
+        and now coding, have helped me reach my present postion where I hope to develop websites, 
+        both large and small. Ease of transition, smooth and appealing visuals that help deliver a client's vision in a concise and timely manner are my goals. 
+        Thank you for visiting my portfolio.
   </p>
  </div>
 </div>
@@ -118,6 +125,24 @@
         Thank you for viewing my portfolio</a><br />
         &copy; 2019 Colin Nebula.
       </p>
+
+      <h3>
+        <p>
+          Protfolio
+        </p>
+
+        <p>
+          Work
+        </p>
+
+        <p>
+          Resume
+        </p>
+
+        <p>
+          Contact Information
+        </p>
+      </h3>
 </div>
   
 </body>
