updated index.html and css files

--- a/index.html
+++ b/index.html
@@ -118,32 +118,35 @@
 
 
 
-<!--footer code stars here -->
+<!--footer code starts here -->
 <div class="footer">
     <h2>❤️ Colin Nebula Portfolio</h2>
       <p>
         Thank you for viewing my portfolio</a><br />
         &copy; 2019 Colin Nebula.
+
+        <!-- Social Networking information-->
+        <p><a href="https://github.com/">GitHub</a></p>
+        <p><a href="https://www.linkedin.com/">LinkedIn</a></p> 
       </p>
 
       <h3>
-        <p>
-          Protfolio
+        <p><a href="#portfolio">Portfolio</a>
         </p>
 
-        <p>
-          Work
+        <p><a href="#work">Work</a>
         </p>
 
-        <p>
-          Resume
-        </p>
+        <p><a href="#resume">Resume</a></p>
 
-        <p>
-          Contact Information
+        <p><a href="#contact-information">Contact-Information</a>
         </p>
       </h3>
+
+      
 </div>
+
+
   
 </body>
 </html>
