--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Lint to the stylesheet -->
     <link rel="stylesheet" href="./assets/css/armystyle.css" />
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <title>Colin Portfolio</title>
 </head>
 
 <body>
+  <header>
   <div class="header">
     <h1>
       <a href="/">Colin Nebula</a>
@@ -26,7 +30,7 @@
       </li>
 
       <li>
-        <a href="#contact-information">Contact Information</a>
+        <a href="#about-me">About Me</a>
       </li>
 
       <li>
@@ -38,9 +42,19 @@
   </div>
 </header>
 
-<div class="hero"></div>
+<!-- The Hero section starts  -->
+<section>
+<div class="hero-image"></div>
+<div class="hero-text">
+<h3 style="font-size:50px"> Hi I am Colin Nebula</h3>
+  <p>And I am a full stck Web Developer</p>
+</div>
+<div>
+
+ <!-- The  section starts  --> 
  <div class="content">
     <div class="portfolio">
+      <h3> Portfolio</h3>
       <img src="./assets/images/lead-generation.png"  width="300" height="200" class="float-left" alt="Recent projects" />
     <h2>
       <p>
@@ -70,26 +84,26 @@
   </p>
  </div>
 <!--Work Contact information section here -->
- <div class="contact-information" class="contact-information">
+ <div class="about-me" class="about-me">
   <img src="./assets/images/C.Nebula.jpg" width="200" height="200" class="float-right" alt="This is my contact imformation" />
-  <h2>Contact Information</h2>
+  <h2>About Me</h2>
   <h3>Colin Nebula</h3>
   <p>
     As an open and approachable person who loves to engage with others both in person and virtually, 
-        I find myself always drawn to anything to do with technology and computers. 
-        As a self starter who loves being part of a team as well, I bring discpline and rigour from my years serving the US Army. 
-        This, in addition to my numerous diplomas in digital art, technology, animation, 
-        and now coding, have helped me reach my present postion where I hope to develop websites, 
-        both large and small. Ease of transition, smooth and appealing visuals that help deliver a client's vision in a concise and timely manner are my goals. 
-        Thank you for visiting my portfolio.
+    I find myself always drawn to anything to do with technology and computers. 
+    As a self starter who loves being part of a team as well, I bring discpline and rigour from my years serving the US Army. 
+    This, in addition to my numerous diplomas in digital art, technology, animation, 
+    and now coding, have helped me reach my present postion where I hope to develop websites, 
+    both large and small. Ease of transition, smooth and appealing visuals that help deliver a client's vision in a concise and timely manner are my goals. 
+    Thank you for visiting my portfolio.
   </p>
  </div>
-</div>
+ </div>
 
-<div class="previews">
+ <div class="previews">
   <div class="preview-lead">
-    <h3>Horiseon</h3>
-      <img src="./assets/images/lead-generation.png " alt="Demo" />
+    <h3>Previews</h3>
+      <img src="./assets/images/online-reputation-management.jpg " alt="Demo" />
       <p>
         This section I am confused about but if it woks like it shoud the Yessss!
 
@@ -107,15 +121,15 @@
 
 
   <div class="preview-cost">
-    <h3>Robot</h3>
-      <img src="./assets/images/lead-generation.png " alt="Demo" />
+    <h3>Robot Gladiators</h3>
+      <img src="./assets/images/online-reputation-management.jpg " alt="Demo" />
       <p>
         This section I am confused about but if it woks like it shoud the Yessss!
 
       </p>
    </div>
 </div>
-
+</section>
 
 
 <!--footer code starts here -->
@@ -126,11 +140,12 @@
         &copy; 2019 Colin Nebula.
 
         <!-- Social Networking information-->
-        <p><a href="https://github.com/">GitHub</a></p>
-        <p><a href="https://www.linkedin.com/">LinkedIn</a></p> 
+      </p>
+        <a href="#" class="fa fa-github"></a><br>
+        <a href="#" class="fa fa-linkedin"></a> 
       </p>
 
-      <h3>
+        <h3>
         <p><a href="#portfolio">Portfolio</a>
         </p>
 
@@ -141,7 +156,8 @@
 
         <p><a href="#contact-information">Contact-Information</a>
         </p>
-      </h3>
+      </h3>  
+      
 
       
 </div>
