--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <section>
 <div class="hero-image"></div>
 <div class="hero-text">
-<h3 style="font-size:50px"> Hi I am Colin Nebula</h3>
-  <p>And I am a full stck Web Developer</p>
+<h3 style="font-size:50px"> Hello, I am Colin Nebula</h3>
+  <p>I am a full-stack Web Developer</p>
 </div>
 <div>
 
@@ -58,9 +58,7 @@
       <img src="#"  width="300" height="200" class="float-left" alt="Recent projects" />
     <h2>
       <p>
-        mobile internet use means that users are searching for the right business as they travel, 
-        shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your 
-        visibility and find the right customers for your business.
+        Here are a sample of projects completed. Please view the array of work to better understand my capabilities. 
       </p>
     </h2>
  </div>
@@ -70,7 +68,9 @@
   <img src="./assets/images/search-engine-optimization.jpg" width="300" height="200" class="float-right" alt="work references coming soon!" />
   <h2>Work</h2>
   <p>
-    This is the section where I mention any work related experiences
+    I now have the skills to be employed to 
+    create appealing web pages that have an artistic flair from my years of life drawing and graphic design 
+    for games, but primarily from my knowledge of industry standards for optimizable web pages.
   </p>
  </div>
 
@@ -80,7 +80,7 @@
   <img src="./assets/images/search-engine-optimization.jpg" width="300" height="200" class="float-left" alt="work references coming soon!" />
   <h2>Resume</h2>
   <p>
-    This is the section where I mention any work related experiences
+    Please click here to view my resume and quallifications.  
   </p>
  </div>
 <!--Work Contact information section here -->
@@ -105,7 +105,7 @@
     <h3>Previews</h3>
       <img src="./assets/images/online-reputation-management.jpg " alt="Demo" />
       <p>
-        This section I am confused about but if it woks like it shoud the Yessss!
+        Here you may preview my projects through demos and visuals. All of these were made using CSS and HTML.
 
       </p>
   </div>
@@ -114,7 +114,8 @@
     <h3>Run-Buddy</h3>
       <img src="./assets/images/lead-generation.png " alt="Demo" />
       <p>
-        This section I am confused about but if it woks like it shoud the Yessss!
+        Run-Buddy is one example of a website that connects runners with buddies to run with. The features embedded 
+        include seearch engine optimization, Javascript, CSS, and HTML.
 
       </p>
   </div>
@@ -124,7 +125,7 @@
     <h3>Robot Gladiators</h3>
       <img src="./assets/images/online-reputation-management.jpg " alt="Demo" />
       <p>
-        Robot Gladiator is a game where players use their bobots attack each other until only one is left standing.
+        Robot Gladiator is a game where players use their robots attack each other until only one is left standing.
         This game uses Javascript to help the robots make decisions.
       </p>
    </div>
