added header flexbox

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <header>
+  <nav>
   <div class="header">
     <h1>
       <a href="/">Colin Nebula</a>
@@ -40,6 +41,7 @@
       </ul>
     </div>
   </div>
+  </nav>
 </header>
 
 <!-- The Hero section starts  -->
