--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-  <nav>
+    <nav>
   <div class="header">
     <h1>
       <a href="/">Colin Nebula</a>
@@ -57,7 +57,9 @@
  <div class="content">
     <div class="portfolio">
       <h3> Portfolio</h3>
+      <a href="search-engine-optimization.jpg">
       <img src="#"  width="300" height="200" class="float-left" alt="Recent projects" />
+      </a>
     <h2>
       <p>
         Here are a sample of projects completed. Please view the array of work to better understand my capabilities. 
@@ -67,6 +69,7 @@
 
 <!--Work Starts section here -->
  <div class="work" class="work">
+  <a href="search-engine-optimization.jpg">
   <img src="./assets/images/search-engine-optimization.jpg" width="300" height="200" class="float-right" alt="work references coming soon!" />
   <h2>Work</h2>
   <p>
@@ -79,7 +82,9 @@
 
 <!--Work resume section here -->
  <div class="resume" class="resume"> 
+  <a href="search-engine-optimization.jpg">
   <img src="./assets/images/search-engine-optimization.jpg" width="300" height="200" class="float-left" alt="work references coming soon!" />
+  </a>
   <h2>Resume</h2>
   <p>
     Please click here to view my resume and quallifications.  
@@ -87,7 +92,9 @@
  </div>
 <!--Work Contact information section here -->
  <div class="about-me" class="about-me">
+  <a href="search-engine-optimization.jpg">
   <img src="./assets/images/C.Nebula.jpg" width="200" height="200" class="float-right" alt="This is my contact imformation" />
+  </a>
   <h2>About Me</h2>
   <h3>Colin Nebula</h3>
   <p>
@@ -105,6 +112,7 @@
  <div class="previews">
   <div class="preview-1">
     <h3>Previews</h3>
+    <a href="online-reputation-management.jpg">
       <img src="./assets/images/online-reputation-management.jpg " alt="Demo" />
       <p>
         Here you may preview my projects through demos and visuals. All of these were made using CSS and HTML.
