updated the README.md

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 
 <!--Work Starts section here -->
  <div class="work" class="work">
+  <a href="search-engine-optimization.jpg">
   <img src="./assets/images/search-engine-optimization.jpg" width="300" height="200" class="float-right" alt="work references coming soon!" />
+  </a>
   <h2>Work</h2>
   <p>
     I now have the skills to be employed to 
@@ -77,7 +79,9 @@
 
 <!--Work resume section here -->
  <div class="resume" class="resume"> 
+  <a href="search-engine-optimization.jpg">
   <img src="./assets/images/search-engine-optimization.jpg" width="300" height="200" class="float-left" alt="work references coming soon!" />
+  </a>
   <h2>Resume</h2>
   <p>
     Please click here to view my resume and quallifications.  
@@ -103,7 +107,9 @@
  <div class="previews">
   <div class="preview-1">
     <h3>Previews</h3>
+    <a href="online-reputation-management.jpg">
       <img src="./assets/images/online-reputation-management.jpg " alt="Demo" />
+      </a>
       <p>
         Here you may preview my projects through demos and visuals. All of these were made using CSS and HTML.
 
@@ -112,7 +118,9 @@
 
   <div class="preview-2">
     <h3>Run-Buddy</h3>
+      <a href="search-engine-optimization.jpg">
       <img src="./assets/images/lead-generation.png " alt="Demo" />
+      </a>
       <p>
         Run-Buddy is one example of a website that connects runners with buddies to run with. The features embedded 
         include seearch engine optimization, Javascript, CSS, and HTML.
@@ -123,7 +131,9 @@
 
   <div class="preview-3">
     <h3>Robot Gladiators</h3>
+      <a href="online-reputation-management.jpg">
       <img src="./assets/images/online-reputation-management.jpg " alt="Demo" />
+      </a>
       <p>
         Robot Gladiator is a game where players use their robots attack each other until only one is left standing.
         This game uses Javascript to help the robots make decisions.
