updated the index.html, script and README.md files

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
  <main class="content">
     <article class="portfolio">
       <h3> Portfolio</h3>
-      <img src="#"  width="300" height="200" class="float-left" alt="Recent projects" />
+      <a href="search-engine-optimization.jpg">
+      <img src="./assets/images/search-engine-optimization.jpg"  width="300" height="200" class="float-left" alt="Recent projects" />
+    </a>
       <h2>
         <p>
          Here are a sample of projects completed. Please view the array of work to better understand my capabilities. 
@@ -78,11 +80,11 @@
 
 
   <!--Work resume section here -->
- <article id="resume" class="resume"> 
+ <article id="contact-me" class="contact-me"> 
   <a href="search-engine-optimization.jpg">
-    <img src="./assets/images/search-engine-optimization.jpg"  width="300" height="200" class="float-left" alt="work references coming soon!" />
+    <img src="./assets/images/online-reputation-management.jpg"  width="300" height="200" class="float-left" alt="work references coming soon!" />
       </a>
-    <h2>Resume</h2>
+    <h2>Contact Me</h2>
       <p>
         Please click here to view my resume and quallifications.  
       </p>
@@ -109,9 +111,10 @@
   <article class="preview-1">
     <h3>Previews</h3>
       <a href="online-reputation-management.jpg">
-      <img src="./assets/images/online-reputation-management.jpg " alt="Demo" />
+      <img src="./assets/images/online-reputation-management.jpg " alt="Latest Project previews" />
       </a>
       <p>
+        JAVASCRIPT/CSS/HTML
         Here you may preview my projects through demos and visuals. All of these were made using CSS and HTML.
 
       </p>
@@ -120,10 +123,11 @@
     <article class="preview-2">
     <h3>Run-Buddy</h3>
       <a href="search-engine-optimization.jpg">
-      <img src="./assets/images/lead-generation.png " alt="Demo" />
+      <img src="./assets/images/search-engine-optimization.jpg " alt="Run Buddy Project preview" />
       </a>
       <p>
-        Run-Buddy is one example of a website that connects runners with buddies to run with. The features embedded 
+        CSS/HTML
+        Run Buddy is one example of a website that connects runners with buddies to run with. The features embedded 
         include seearch engine optimization, Javascript, CSS, and HTML.
 
       </p>
@@ -132,9 +136,10 @@
     <article class="preview-3">
     <h3>Robot Gladiators</h3>
       <a href="online-reputation-management.jpg">
-      <img src="./assets/images/online-reputation-management.jpg " alt="Demo" />
+      <img src="./assets/images/online-reputation-management.jpg " alt="Robot Gladiators Project preview" />
       </a>
       <p>
+        JAVASCRIPT/CSS/HTML
         Robot Gladiator is a game where players use their robots attack each other until only one is left standing.
         This game uses Javascript to help the robots make decisions.
       </p>
