updated the html file

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     for games, but primarily from my knowledge of industry standards for optimizable web pages.
       </p>
   </article>
-
+  <!-- Work section Ends -->
 
   <!--Work resume section here -->
  <article id="contact-me" class="contact-me"> 
