updated the index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Lint to the stylesheet -->
     <link rel="stylesheet" href="./assets/css/armystyle.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <title>Colin Portfolio</title>
@@ -52,6 +53,7 @@
 
 
  <!-- The  section starts  --> 
+ <section class="flex-container">
  <main class="content">
     <article class="portfolio">
       <h3> Portfolio</h3>
@@ -106,7 +108,7 @@
       </p>
     </article>
 </main>
-
+</section>
 <aside class="previews">
   <article class="preview-1">
     <h3>Previews</h3>
@@ -146,6 +148,12 @@
       </article>
   </aside>
 
+  <script src="./assets/js/script.js"></script>
+     <script type="text/javascript"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script></script>
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 
 <!--footer code starts here -->
