updated the css file

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   Work Day Scheduler
                 </p>
                 <figure class="image is-2by1">
-                  <img src="https://whizolosophy.com/public/uploads/images/2017/01/Global-Warming-desk-backgrounds.jpg">
+                  <img src="https://media.greenmatters.com/brand-img/qgpw37VY5/0x0/global-warming-1605819590283.jpg">
                 </figure>
                 <div class="content">
                   JAVASCRIPT/CSS/HTML JAVASCRIPT/CSS/HTML A visual display of a schedule
@@ -190,7 +190,7 @@
                 </p>
                 <figure class="image is-2by1">
                   <img
-                    src="https://www.thoughtco.com/thmb/T7e5vcG6Fb3ti3TH6DD7YGJdA_U=/5250x3862/filters:fill(auto,1)/smoke-and-coal-plant-smokestacks-520518812-584ac8125f9b58a8cd0e87c8.jpg">
+                    src="https://assets.cdn.moviepilot.de/files/a8921d78e0f031455628ac45b49bb88e1a43343399c7c2f1eab7740d0004/fill/992/477/Godzilla-2-Bild.jpg">
                 </figure>
                 <div class="content">
                   JAVASCRIPT/CSS/HTML Here is a sample of my 2D and 3D artwork
@@ -200,7 +200,7 @@
                 </div>
               </div>
               <footer class="card-footer">
-                <a href="https://colinnebula3dartist.blogspot.com/" class="card-footer-item">Learn more here</a>
+                <button href="https://colinnebula3dartist.blogspot.com/" class="card-footer-item">Learn more here</button>
               </footer>
             </div>
           </div>
@@ -216,7 +216,7 @@
                 </p>
                 <figure class="image is-2by1">
                   <img
-                    src="https://4.bp.blogspot.com/-aX72_a2F0E0/XCMm3onRJ3I/AAAAAAAAAAY/hsSAkSePoYUtlhtkTeT5RaCEqmLEmVD7ACLcBGAs/w1200-h630-p-k-no-nu/image-wide-2.jpg">
+                    src="https://cdnb.artstation.com/p/assets/images/images/007/476/977/large/jacob-jones-gladiator-by-rocketman399-d9rfd68.jpg?1506403382">
                 </figure>
                 <div class="content">
                   JAVASCRIPT/CSS/HTML
@@ -227,8 +227,8 @@
 
                 </div>
               </div>
-              <footer class="card-footer">
-                <a href="#" class="card-footer-item">Learn more here</a>
+              <footer class="card-footer is-mobile">
+                <button href="#" class="card-footer-item">Learn more here</button>
               </footer>
             </div>
           </div>
@@ -250,8 +250,8 @@
                   to my 2D/3D Art/Animation & Game Design.
                 </div>
               </div>
-              <footer class="card-footer">
-                <a href="#" class="card-footer-item">Learn more here</a>
+              <footer class="card-footer is-mobile">
+                <button href="#" class="card-footer-item is-primary">Learn more here</button>
               </footer>
             </div>
           </div>
@@ -261,7 +261,7 @@
   </section>
 
   <!-- Resume Button-->
-  <div class="container">
+  <div class="container is-mobile">
     <div class="field is-grouped mt-6 is-flex">
       <p class="control">
         <button class="button is-info is-outlined">
