fixed merge conflicts

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     alt="#" />
                 </figure>
                 <div class="content">
-                  Enviro Dashboard provides information about the effects of climate change in the world.
+                  Enviro-Dashboard provides information about the effects of climate change in the world.
                   The user will enter the name of their city in the search field. After clicking the submit button,
                   the user will be presented with relevant climate information.
                 </div>
